[gd_scene load_steps=11 format=3 uid="uid://cywqynob1jiss"]

[ext_resource type="Script" path="res://scripts/card boards/shop_overlay.gd" id="1_esylk"]
[ext_resource type="Texture2D" uid="uid://dwcwjr1afhavh" path="res://assets/UI/Shop/ShopBackground.png" id="2_qte6w"]
[ext_resource type="Script" uid="uid://bjtekbx1mr6dq" path="res://scripts/cards/card_goto_marker.gd" id="4_3f3sj"]
[ext_resource type="Texture2D" uid="uid://cg7hb78l0t2lv" path="res://assets/UI/Shop/RerollShopButton1.png" id="5_ruoej"]
[ext_resource type="Theme" uid="uid://doyae2xhqstbr" path="res://assets/UI/Shop/ShopText.tres" id="5_v7x5a"]
[ext_resource type="Texture2D" uid="uid://d0kpbcpceki2l" path="res://assets/UI/Shop/RerollShopButton3.png" id="6_xdgco"]
[ext_resource type="Texture2D" uid="uid://osba4rtksrqu" path="res://assets/UI/Shop/RerollShopButton2.png" id="7_lsx2n"]
[ext_resource type="Texture2D" uid="uid://c7rv62mn0lnla" path="res://assets/UI/Shop/CloseShopButton1.png" id="9_lpou0"]
[ext_resource type="Texture2D" uid="uid://dlr0n4kn0p25k" path="res://assets/UI/Shop/CloseShopButton3.png" id="10_rbrmy"]
[ext_resource type="Texture2D" uid="uid://cjkdhxt6mclah" path="res://assets/UI/Shop/CloseShopButton2.png" id="11_sv6i2"]

[node name="ShopOverlay" type="Node2D"]
script = ExtResource("1_esylk")
label = "El Shoppe"

[node name="Panel" type="Sprite2D" parent="."]
position = Vector2(615, 391)
scale = Vector2(4, 4)
texture = ExtResource("2_qte6w")

[node name="Slots" type="Node2D" parent="Panel"]

[node name="TopRight" type="Node2D" parent="Panel/Slots"]

[node name="PotionMarker1" type="Marker2D" parent="Panel/Slots/TopRight"]
position = Vector2(21.5, -29.5)
script = ExtResource("4_3f3sj")

[node name="PotionMarker2" type="Marker2D" parent="Panel/Slots/TopRight"]
position = Vector2(58.5, -29.5)
script = ExtResource("4_3f3sj")

[node name="BottomRight" type="Node2D" parent="Panel/Slots"]

[node name="WeaponMarker1" type="Marker2D" parent="Panel/Slots/BottomRight"]
position = Vector2(21.5, 16.5)
script = ExtResource("4_3f3sj")

[node name="WeaponMarker2" type="Marker2D" parent="Panel/Slots/BottomRight"]
position = Vector2(58.5, 16.5)
script = ExtResource("4_3f3sj")

[node name="Left" type="Node2D" parent="Panel/Slots"]

[node name="WreathMarker1" type="Marker2D" parent="Panel/Slots/Left"]
position = Vector2(-62.5, 16.5)
script = ExtResource("4_3f3sj")

[node name="WreathMarker2" type="Marker2D" parent="Panel/Slots/Left"]
position = Vector2(-25.5, 16.5)
script = ExtResource("4_3f3sj")

[node name="BoardTitle" type="RichTextLabel" parent="Panel"]
offset_left = -82.0
offset_top = -51.0
offset_right = -2.0
offset_bottom = -35.0
theme = ExtResource("5_v7x5a")
theme_override_colors/default_color = Color(0.23, 0.1334, 0.19941, 1)
text = "El Shoppe"

[node name="RerollShop" type="TextureButton" parent="Panel"]
offset_left = -75.0
offset_top = -17.0
offset_right = -46.0
offset_bottom = -3.0
texture_normal = ExtResource("5_ruoej")
texture_pressed = ExtResource("6_xdgco")
texture_hover = ExtResource("7_lsx2n")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/RerollShop"]
layout_mode = 0
offset_left = 2.0
offset_top = -0.25
offset_right = 28.0
offset_bottom = 6.75
mouse_filter = 2
theme = ExtResource("5_v7x5a")
theme_override_font_sizes/normal_font_size = 8
text = "Reroll"
scroll_active = false
horizontal_alignment = 1

[node name="Price" type="RichTextLabel" parent="Panel/RerollShop"]
layout_mode = 0
offset_left = 2.0
offset_top = 6.0
offset_right = 27.0
offset_bottom = 13.0
mouse_filter = 2
theme = ExtResource("5_v7x5a")
theme_override_font_sizes/normal_font_size = 8
text = "X$"
scroll_active = false
horizontal_alignment = 1

[node name="CloseShop" type="TextureButton" parent="Panel"]
offset_left = -41.0
offset_top = -17.0
offset_right = -12.0
offset_bottom = -3.0
texture_normal = ExtResource("9_lpou0")
texture_pressed = ExtResource("10_rbrmy")
texture_hover = ExtResource("11_sv6i2")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/CloseShop"]
layout_mode = 0
offset_right = 29.0
offset_bottom = 14.0
mouse_filter = 2
theme = ExtResource("5_v7x5a")
theme_override_font_sizes/normal_font_size = 8
text = "Close"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
offset_left = -82.5
offset_top = -34.75
offset_right = -2.5
offset_bottom = -18.75
theme = ExtResource("5_v7x5a")
theme_override_colors/default_color = Color(0.23, 0.1334, 0.19941, 1)
theme_override_font_sizes/normal_font_size = 8
text = "cards cost their value in $"
horizontal_alignment = 1

[node name="MarkerExtents" type="ReferenceRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
